--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.554.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
