--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "ethers": "^6.15.0",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
     "lottie-react": "^2.4.1",
