--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
@@ -20,6 +21,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
